--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,9 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>gwt-maven-plugin</artifactId>
                     <version>${gwt.maven}</version>
+                    <configuration>
+                        <strict>true</strict>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.zanata</groupId>
