Temporarily move ActivityNotFoundPresenter and all its dependencies from Uberfire into gui project.

--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -229,6 +229,9 @@
             <resource>
                 <directory>${project.build.directory}/generated-sources/apt</directory>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
         </resources>
 
 
