(WIP) attempting to convert Administration to full Errai & UF

--- a/gui/src/main/java/ErraiApp.properties
+++ b/gui/src/main/java/ErraiApp.properties
@@ -1,1 +1,1 @@
-errai.ioc.blacklist=com.gwtplatform.mvp.client.* org.jboss.as.console.client.core.DefaultPlaceManager com.gwtplatform.mvp.client.proxy.DefaultPlaceManager
+errai.ioc.blacklist=com.gwtplatform.mvp.client.* com.gwtplatform.mvp.client.proxy.*
