--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <ace.version>1.0.0-jboss-1</ace.version>
         <ballroom.version>2.0.6.Final</ballroom.version>
+        <errai.version>3.0.0.20131205-M3</errai.version>
         <gin.version>2.0.0</gin.version>
         <guice.version>3.0</guice.version>
         <gwt.version>2.5.1</gwt.version>
@@ -93,6 +94,7 @@
         <gwt-vis.version>1.1.1</gwt-vis.version>
         <junit.version>4.11</junit.version>
         <protovis.version>0.4.1</protovis.version>
+        <uberfire.version>0.5.0-SNAPSHOT</uberfire.version>
 
         <gwt.bindAddress>127.0.0.1</gwt.bindAddress>
         <gwt.bindPort>9990</gwt.bindPort>
